# imgui_boilerplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: cppcheck.cmake
documentation/: how_to.md
libraries/: CMakeLists.txt
libraries/imgui/sources/: CMakeLists.txt
libraries/imgui_base/includes/imgui_base/: imgui_impl_sdl3.hpp  vulkan_data.hpp
libraries/imgui_base/sources/: CMakeLists.txt
libraries/imgui_base/sources/code/imgui_base/: imgui_impl_sdl3.cpp  imgui_impl_vulkan.cpp  vulkan_data.cpp
libraries/imgui_helpers/includes/imgui_helpers/: image_helper.hpp
libraries/imgui_helpers/sources/: CMakeLists.txt
libraries/imgui_helpers/sources/code/imgui_helpers/: image_helper.cpp
libraries/my_maths/includes/my_maths/: my_maths.hpp
libraries/my_maths/sources/: CMakeLists.txt  my_maths.cpp
libraries/stb/: CMakeLists.txt
sources/: CMakeLists.txt
sources/code/: .clang-format  .clang-tidy
sources/code/cpp_boilerplate/: imgui_impl_sdl3.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.hpp  main.cpp  vulkan_data.cpp
sources/code/cpp_boilerplate/helpers/: image_helper.cpp  image_helper.hpp
sources/resources/: CMakeLists.txt
tests/cppcheck/: cppcheck-report.txt
tests/unit_tests/: CMakeLists.txt  hello_test.cpp
